UI fixes 1) text overflow fix 2) loading state fix

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@ body {
 #root{
   height: 100%;
 }
+.zi_textoverflow{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
